fixz-index values

--- a/src/scss/shop/_filters.scss
+++ b/src/scss/shop/_filters.scss
@@ -19,7 +19,7 @@
     display: none;
   }
 
-  z-index: 2;
+  z-index: 1;
 }
 
 
@@ -34,7 +34,6 @@
 
     &--active {
       display: block;
-      z-index: 1;
     }
   }
 }
